--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 roxmltree = "0.19"
 regex = "1.10"
+once_cell = "1.19"
 
 [[bin]]
 name = "rustmap"
