chore: Update Cargo.toml description to match new README
- Enhanced description with enterprise focus
- Aligns package metadata with comprehensive README documentation
- Reflects the professional-grade nature of the tool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "oxidescanner"
 version = "1.0.1"
 edition = "2021"
 authors = ["3xecutablefile"]
-description = "Fast port scanner with intelligent exploit discovery - Fixed searchsploit integration"
+description = "Enterprise network security scanner with intelligent exploit discovery - Fixed searchsploit integration with smart query filtering"
 license = "MIT"
 keywords = ["security", "scanner", "network", "exploit", "port-scanner"]
 categories = ["command-line-utilities", "network-programming"]
